# megaphone

./: .dockerignore  .gitignore  .gitlab-ci.yml  .panproject.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: build.yml  tests.yml
demo/deno/: chat-server.ts  client.ts  rx-client.ts
demo/megaphone-react-demo/: package-lock.json  package.json
demo/megaphone-react-demo/src/: App.js
demo/react-vite-demo/: index.html  package-lock.json  package.json  vite.config.ts
demo/react-vite-demo/src/: App.tsx
demo/react-vite-demo/src/components/: Message.tsx
docker/: Dockerfile  docker-compose.yml  megaphone-be.dockerfile  megaphone-chat-fe.dockerfile  megaphone-chat.dockerfile  megaphone-operator.dockerfile
docker/nginx/: nginx.conf
examples/demo-client/: main.rs
libs/megaphone-client/: .gitignore  README.md  package.json
libs/megaphone-client/src/: index.ts
megaphone/: Cargo.toml  build.rs
megaphone/examples/demo-client/: main.rs
megaphone/proto/: megaphone.proto
megaphone/src/: lib.rs  main.rs  state.rs
megaphone/src/client/: error.rs  mod.rs  model.rs
megaphone/src/client/utils/: mod.rs
megaphone/src/core/: config.rs  error.rs
megaphone/src/dto/: agent.rs  channel.rs  error.rs  message.rs
megaphone/src/grpc/: server.rs  sync_service.rs
megaphone/src/http/: channel.rs  mod.rs  vagent.rs
megaphone/src/model/: constants.rs  feature.rs
megaphone/src/service/: agents_manager_service.rs  megaphone_service.rs  mod.rs
operator/: Cargo.toml  README.md
operator/kube/: megaphone-crd.yml  megaphone-demo.yml
operator/src/: crdgen.rs  main.rs  spec.rs
operator/src/model/: context.rs  error.rs  mod.rs  spec.rs
operator/src/policy/: error.rs  finalizer.rs  megaphone.rs  mod.rs  reconciliation.rs
operator/src/service/: megactl_svc.rs  mod.rs  reconciler_svc.rs
proto/: megaphone.proto
src/: main.rs  state.rs
src/client/: error.rs  mod.rs
src/client/utils/: circular_buffer.rs
src/core/: config.rs  error.rs
src/dto/: agent.rs  error.rs  message.rs  mod.rs
src/grpc/: mod.rs  server.rs  sync_service.rs
src/http/: channel.rs  mod.rs  vagent.rs
src/model/: mod.rs
src/service/: agents_manager_service.rs  megaphone_service.rs  mod.rs
tests/: client.rs  simple_cluster_rw.rs  single_node_integration_test.rs
tests/docker/: builder.rs  image.rs  mod.rs
tests/kubernetes/: client.rs  cluster.rs  mod.rs
tests/kubernetes/resources/: ingress.rs  megaphone.rs  mod.rs  nginx.rs
tests/testcontainers_ext/: k3s.rs  mod.rs
