[package]
name = "megaphone"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.2"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["rt", "macros"] }
futures = "0.3.25"

uuid = { version = "1.2.1", features = ["v4"] }
dashmap = "5.4.0"

axum = "0.6.0-rc.4"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"