[package]
name = "megaphone-broker"
version = "0.10.4"
edition = "2021"

authors = ["Davide Ghilardi <dghila@d71.dev>"]
description = "Reverse proxy for long running requests and server streaming"
keywords = [ "http", "reverse-proxy", "infrastructure", "cloud" ]
repository = "https://github.com/dghilardi/megaphone"
license = "AGPL-3.0-only"
readme = "README.md"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
anyhow = "1.0.75"
rand = "0.8.5"

env_logger = "0.11"
log = "0.4.17"

config = "0.14"
thiserror = { version = "1.0.37" }
tokio = { version = "1.21.2", features = ["rt", "macros"] }
tokio-stream = { version = "0.1.14", optional = true }
futures = { version = "0.3.25" }

dashmap = "5.4.0"

axum = "0.6.20"
hyperlocal = "0.8.0"
metrics = "0.22.0"
metrics-exporter-prometheus = "0.13.0"
lazy_static = "1.4.0"
regex = "1.10.2"


clap = { version = "4.1.6", features = ["derive"], optional = true }
hyper = { version = "0.14.28", optional = true }

tonic = "0.11"
prost = "0.12"
prost-types = "0.12.1"
hex = "0.4.3"

megaphone = "0.10"
md5 = "0.7.0"
ring = "0.17"
base64 = "0.21.7"
reqwest = { version = "0.12.4", features = ["json"] }

[features]
bin-cli = [ "clap", "hyper"]

[[bin]]
name = "megactl"
required-features = ["bin-cli"]

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
kube = { version = "0.90.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.1", features = ["latest"] }
lazy_static = "1.4.0"
tempfile = "3.10.1"

[dev-dependencies.testcontainers]
# version = "0.15.0"
git = "https://github.com/dghilardi/testcontainers-rs.git"
branch = "feature/userns"