[package]
name = "megaphone"
version = "0.7.2"
edition = "2021"

authors = ["Davide Ghilardi <dghila@d71.dev>"]
description = "Reverse proxy for long running requests and server streaming"
keywords = [ "http", "reverse-proxy", "infrastructure", "cloud" ]
repository = "https://github.com/dghilardi/megaphone"
license = "MIT"
readme = "../README.md"

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"

config = "0.13.2"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["rt", "macros"] }
futures = "0.3.25"

dashmap = "5.4.0"

axum = "0.6.20"
hyperlocal = "0.8.0"
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
lazy_static = "1.4.0"
regex = "1.10.2"
chrono = { version = "0.4.31", features = ["serde"] }
anyhow = "1.0.75"


clap = { version = "4.1.6", features = ["derive"] }
hyper = "0.14.26"
