[package]
name = "megaphone"
version = "0.8.13"
edition = "2021"

authors = ["Davide Ghilardi <dghila@d71.dev>"]
description = "Reverse proxy for long running requests and server streaming"
keywords = [ "http", "reverse-proxy", "infrastructure", "cloud" ]
repository = "https://github.com/dghilardi/megaphone"
license = "MIT"
readme = "../README.md"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive"] }
anyhow = "1.0.75"
rand = "0.8.5"

env_logger = "0.10.0"
log = "0.4.17"

config = "0.13.2"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["rt", "macros"] }
futures = "0.3.25"

dashmap = "5.4.0"

axum = "0.6.20"
hyperlocal = "0.8.0"
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
serde_json = "1.0.87"
lazy_static = "1.4.0"
regex = "1.10.2"


clap = { version = "4.1.6", features = ["derive"] }
hyper = "0.14.26"

tonic = "0.10"
prost = "0.12"
prost-types = "0.12.1"

[features]
bin-server = []
bin-cli = []

[[bin]]
name = "megactl"
required-features = ["bin-cli"]

[[bin]]
name = "server"
required-features = ["bin-server"]

[build-dependencies]
tonic-build = "0.10"
