[package]
name = "megaphone-operator"
version = "0.3.6"
edition = "2021"

authors = ["Davide Ghilardi <dghila@d71.dev>"]
description = "Kubernetes operator for megaphone project"
keywords = [ "kubernetes", "operator", "infrastructure", "cloud" ]
repository = "https://github.com/dghilardi/megaphone"
license = "MIT"
readme = "README.md"

[dependencies]
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] } # Macros for easy project setup and testing, multi-threaded runtime for best utilization of resources
kube = { version = "0.86", default-features = true, features = ["derive"] } # Library for talking to Kubernetes API
kube-derive = "0.86" # Support for Custom Resource Definitions
kube-runtime = "0.86" # Custom controller support
k8s-openapi = { version = "0.20", default-features = true, features = ["v1_22"] } # Kube-rs depends on k8s-openapi
futures = "0.3"
# All serde dependencies are used to serialize/deserialize CRDs and other Kubernetes-related structs
serde = "1.0"
serde_json = "1.0"
schemars = "0.8"
thiserror = "1.0" # Custom Error definitions and convenient error mappings
