[package]
name = "megaphone-operator"
version = "0.9.2"
edition = "2021"

authors = ["Davide Ghilardi <dghila@d71.dev>"]
description = "Kubernetes operator for megaphone project"
keywords = [ "kubernetes", "operator", "infrastructure", "cloud" ]
repository = "https://github.com/dghilardi/megaphone"
license = "MIT"
readme = "README.md"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[dependencies]
anyhow = { version= "1.0.70", features = ["default"] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
kube = { version = "0.86", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.20", default-features = true, features = ["v1_22"] }
rustls = "0.21.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.18"
openssl = { version = "0.10.35", features = ["vendored"] }
schemars = { version = "0.8", features = ["chrono"] }
thiserror = "1.0"
hex = "0.4.3"
megaphone = { version = "0.9.0", path = "../megaphone" }
tokio-util = "0.7.10"
rand = "0.8.5"
regex = "1.10.2"
log = "0.4.20"
env_logger = "0.10.1"
